@@ -2,6 +2,12 @@
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*drumkv1-0.3.5 (30 Sep 2013)
+
+  30 Sep 2013; Karl Linden (lilrc) <lilrc@users.sourceforge.net>
+  +drumkv1-0.3.5.ebuild:
+  Version bump.
+
 *drumkv1-0.3.4 (16 Jul 2013)
 
   16 Jul 2013; Karl Linden (lilrc) <lilrc@users.sourceforge.net>
